# libtorch_demo

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
src/: CMakeLists.txt  demo.cpp
src/Dataset/: dataset.cpp  dataset.h
